<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">应用市场</string>
    <string name="install_fail_file_not_exist">Install Fail</string>


    <!--Login -->
    <string name="opening_wechat">正在打开微信，请稍后...</string>
    <string name="opening_qq">正在打开QQ，请稍后...</string>
    <string name="opening_blog">正在打开微博，请稍后...</string>
    <string name="opening_facebook">正在打开Facebook，请稍后...</string>
    <string name="opening_twitter">正在打开twitter，请稍后...</string>
    <string name="login_phone_num_hint">请输入手机号</string>
    <string name="login_verification_num_hint">输入验证码</string>
    <string name="login_title_login">登录账号</string>
    <string name="login_title_login_account">账号密码登录</string>
    <string name="login_title_register">使用手机号登录</string>
    <string name="login_title_register_edit">手机号</string>
    <string name="login_find_pwd">找回密码</string>
    <string name="login_sending_verification_num">发送验证码</string>
    <string name="login_confirm">确认登录</string>
    <string name="login_text">登录</string>
    <string name="login_user_agreement">我已阅读并同意“用户协议”和“隐私政策”</string>

    <string name="login_verification_timer">
        <Data>&lt;font color=#209526>%s&lt;/font>秒后再次获取</Data>
    </string>
    <string name="login_verification_again">发送验证码</string>
    <string name="login_pwd_title">密码登录</string>
    <string name="login_pwd_title_set">设置密码</string>
    <string name="login_pwd_title_verity">验证密码</string>
    <string name="login_pwd_title_content">输入六位数字密码</string>
    <string name="login_pwd_tips">忘记密码？</string>
    <string name="login_register_left">注册</string>
    <string name="login_register_verification_right">验证码登录</string>
    <string name="login_register_pwd_right">密码登录</string>
    <string name="login_register_dialog_title">注册提示</string>
    <string name="login_register_dialog_success">登录成功</string>
    <string name="login_register_dialog_success_ok">确定</string>
    <string name="login_register_dialog_reset_success">设置成功</string>
    <string name="login_register_dialog_text">手机号(<xliff:g id="count">%s</xliff:g>)尚未\n注册，是否要继续注册
    </string>
    <string name="login_register_dialog_cancel">取消</string>
    <string name="login_register_dialog_ok">注册</string>
    <string name="login_register_dialog_pwd_success">密码设置成功</string>
    <string name="fragment_me_account">用户账号</string>
    <string name="fragment_me_nickname">登录/注册</string>
    <string name="fragment_me_app_update">软件更新</string>
    <string name="fragment_me_package_manager">安装包管理</string>
    <string name="fragment_me_settings">系统设置</string>
    <string name="fragment_me_about">关于</string>
    <string name="fragment_me_about_update">检测更新</string>
    <string name="login_register_country_title_text">国家或地区</string>
    <string name="login_register_edit_hint_text">请输入手机号码</string>
    <string name="login_register_third_text">第三方登录方</string>
    <string name="login_register_choose_text">选择</string>
    <string name="login_make_sure_mobile_detail">短信验证码将发送到你手机</string>
    <string name="login_send_mobile_detail">短信验证码已经发送到你手机</string>
    <string name="login_verification_hint">输入您的验证码</string>


    <string name="information_me_sex_string">性别</string>
    <string name="information_me_birthday_string">生日</string>
    <string name="information_me_location_string">地区</string>
    <string name="information_me_wexin_string">微信</string>
    <string name="information_me_facebook_string">Facebook</string>
    <string name="information_me_twtter_string">Twtter</string>
    <string name="information_me_todo_string">未填写</string>
    <string name="information_me_unbind_string">未绑定</string>
    <string name="information_me_back">返回</string>
    <string name="information_me">个人信息</string>
    <string name="information_me_finish">完成</string>
<!--主页-->
    <string name="more_item">更多</string>
    <string name="appstore_down">下载</string>

    <!-- Error View -->
    <string name="error_view_click_to_refresh">点击屏幕,重新加载</string>
    <string name="error_view_no_data">暂无内容</string>
    <string name="error_view_loading">加载中…</string>
    <string name="error_view_load_error_click_to_refresh">内容加载失败\r\n点击重新加载</string>
    <string name="error_view_network_error_click_to_refresh">没有可用的网络</string>
    <string name="tip_network_error">没有可用的网络</string>
</resources>
