<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#ffffff"
    android:padding="10dp"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_register_dialog_title"
        android:gravity="center"
        android:textSize="24sp"
        android:textColor="#000fff"

    />
    <TextView
        android:id="@+id/login_register_dialog_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_register_dialog_text"
        android:textSize="18sp"
        android:minLines="2"
    />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
    >
        <TextView
            android:id="@+id/login_register_dialog_cancel"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="24sp"
            android:text="@string/login_register_dialog_cancel"
        />
        <TextView
            android:id="@+id/login_register_dialog_ok"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="24sp"
            android:text="@string/login_register_dialog_ok"
            android:textColor="#000fff"
        />
    </LinearLayout>
</LinearLayout>