<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/fl_first_container"
              xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@android:color/white"
              android:orientation="vertical"
>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp"
    >
        <com.elf.appstore.widget.ui.CircleImageView
            android:id="@+id/fragment_me_user_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher"
        />
       <!-- <TextView
            android:id="@+id/fragment_me_user_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/fragment_me_user_image"
            android:text="@string/fragment_me_account"
        />-->
        <TextView
            android:id="@+id/fragment_me_user_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/fragment_me_user_image"
            android:paddingLeft="10dp"
            android:layout_centerVertical="true"
            android:text="@string/fragment_me_nickname"
            android:textSize="22sp"
        />
      <!--  <ImageView
            android:id="@+id/fragment_me_enter_information"
            android:layout_width="26dp"
            android:layout_height="48dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_arrow_gray_big"
        />-->
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="20dp"
        android:divider="#000000"
        android:showDividers="end"
    >
        <TextView
            android:id="@+id/fragment_me_app_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_me_app_update"
            android:theme="@style/fragment_me_button_style"
        />
        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:background="@color/smssdk_lv_item_divider"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
        />
        <TextView
            android:id="@+id/fragment_me_package_manager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_me_package_manager"
            android:theme="@style/fragment_me_button_style"
        />
        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:background="@color/smssdk_lv_item_divider"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
        />
        <TextView
            android:id="@+id/fragment_me_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_me_settings"
            android:theme="@style/fragment_me_button_style"
        />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="20dp"
        android:divider="#000000">
        <TextView
            android:id="@+id/fragment_me_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_me_about"
            android:theme="@style/fragment_me_button_style"
        />
        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:background="@color/smssdk_lv_item_divider"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
        />
        <TextView
            android:id="@+id/fragment_me_about_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_me_about_update"
            android:theme="@style/fragment_me_button_style"
            />
    </LinearLayout>
</LinearLayout>