<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
              android:layout_height="match_parent"
    >
    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/login_title_login"
    />
    <LinearLayout
        android:id="@+id/login_phone_num_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal"
        android:layout_below="@id/login_title"
        android:background="@drawable/login_edit_text_bg"
    >

<EditText
    android:id="@+id/login_phone_num"
    android:layout_width="0dp"
    android:layout_weight="7"
    android:hint="@string/login_phone_num_hint"
    android:layout_height="wrap_content"
    android:background="@null"
    android:inputType="phone"
    tools:ignore="TextFields"/>
        <com.elf.appstore.account.CountDownView
            android:id="@+id/login_send_verification"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:background="@null"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/login_sending_verification_num"
        />
    </LinearLayout>
    <TextView
        android:id="@+id/login_tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/login_phone_num_container"
        android:layout_alignStart="@id/login_phone_num_container"
        android:layout_below="@+id/login_phone_num_container"
        android:text="@string/login_text"
        android:textColor="#FF0000"
        android:visibility="invisible"
    />
    <EditText
        android:id="@+id/login_verification_num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_verification_num_hint"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/login_edit_text_bg"
        android:layout_below="@+id/login_tips"
        />
    <com.elf.appstore.account.LoginSubmit
        android:id="@+id/login_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_below="@+id/login_verification_num"
        android:text="@string/login_confirm"
        android:gravity="center"
        android:background="@drawable/login_bottom_text_bg"
    />
    <CheckBox
        android:id="@+id/login_register_agree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_bottom"
        android:layout_marginLeft="50dp"
        android:checked="true"
         />

    <TextView
        android:id="@+id/login_user_agreement_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/login_register_agree"
        android:layout_alignBottom="@+id/login_register_agree"
        android:layout_gravity="center_vertical"
        android:layout_toEndOf="@+id/login_register_agree"
        android:layout_toRightOf="@+id/login_register_agree"
        android:text="@string/login_user_agreement"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_alignParentBottom="true">

        <ImageView
            android:id="@+id/iv_wx_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:clickable="true"
            android:src="@mipmap/wechat_icon"
            />

        <ImageView
            android:id="@+id/iv_qq_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:clickable="true"
            android:src="@mipmap/qq_icon"
            />

        <ImageView
            android:id="@+id/iv_blog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:clickable="true"
            android:src="@mipmap/blog_icon"
            />
        <ImageView
            android:id="@+id/iv_facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:clickable="true"
            android:src="@mipmap/facebook_icon"
            />
        <ImageView
            android:id="@+id/iv_twitter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:clickable="true"
            android:src="@mipmap/twitter_icon"
            />

    </LinearLayout>


</RelativeLayout>

