<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#ffffff"
    android:orientation="vertical"
    android:paddingLeft="26px"
    android:paddingRight="26px">
    <TextView
        android:id="@+id/login_pwd_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_pwd_title"
        style="@style/login_title_style"
    />
    <TextView
        android:id="@+id/login_pwd_title_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50px"
        android:gravity="center"
        android:text="@string/login_pwd_title_content"
        android:textColor="#000000"
        android:textSize="24sp"
        android:typeface="monospace"
    />
    <com.elf.appstore.account.ui.VerificationCodeView
        android:id="@+id/login_pwd_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:paddingLeft="12dp"
        app:icv_et_number="6"
        app:icv_et_width="40dp"
        app:icv_et_text_size="30sp"
        android:paddingRight="12dp">
    </com.elf.appstore.account.ui.VerificationCodeView>
    <TextView
        android:id="@+id/login_pwd_tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/login_pwd_tips"
        android:textColor="#4753FB"
        android:clickable="true"
        android:textSize="16sp"
        android:typeface="monospace"
    />
    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/smssdk_next"
        style="@style/login_button_style"
    />
</LinearLayout>