<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.elf.appstore.widget.ui.ActivityMyInformation">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/login_verification_button_again"
        android:paddingBottom="50dp"
        android:paddingTop="50dp"
    >
        <LinearLayout
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
        >
            <com.elf.appstore.widget.ui.CircleImageView
                android:id="@+id/information_me_icon_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@mipmap/ic_launcher"
            />
            <EditText
                android:id="@+id/information_me_name_et"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:background="@null"
                android:focusable="false"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/fragment_me_account"
                android:textColor="@android:color/black"
                android:textSize="16sp"
            />
        </LinearLayout>

    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
    >
        <LinearLayout
            android:id="@+id/information_me_sex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
        >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/information_me_sex_string"
                android:theme="@style/information_me_button_style"
            />
            <TextView

                android:id="@+id/information_me_sex_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/information_me_todo_string"
                android:theme="@style/information_me_button_style_right"
            />

        </LinearLayout>
        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:background="@color/smssdk_lv_item_divider"
        />
        <LinearLayout
            android:id="@+id/information_me_birthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
        >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/information_me_birthday_string"
                android:theme="@style/information_me_button_style"
            />
            <TextView

                android:id="@+id/information_me_birthday_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/information_me_todo_string"
                android:theme="@style/information_me_button_style_right"
            />

        </LinearLayout>
        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:background="@color/smssdk_lv_item_divider"
        />
        <LinearLayout
            android:id="@+id/information_me_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
        >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/information_me_location_string"
                android:theme="@style/information_me_button_style"
            />
            <TextView

                android:id="@+id/information_me_location_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/information_me_todo_string"
                android:theme="@style/information_me_button_style_right"
            />

        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="#000000"
        android:orientation="vertical"
        android:paddingTop="20dp">
        <LinearLayout
            android:id="@+id/information_me_wexin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
        >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/information_me_wexin_string"
                android:theme="@style/information_me_button_style"
            />
            <TextView

                android:id="@+id/information_me_wexin_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/information_me_unbind_string"
                android:theme="@style/information_me_button_style_right"

            />

        </LinearLayout>
        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:background="@color/smssdk_lv_item_divider"
        />
        <LinearLayout
            android:id="@+id/information_me_facebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
        >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/information_me_facebook_string"
                android:theme="@style/information_me_button_style"
            />
            <TextView

                android:id="@+id/information_me_facebook_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/information_me_unbind_string"
                android:theme="@style/information_me_button_style_right"
            />

        </LinearLayout>
        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:background="@color/smssdk_lv_item_divider"
        />
        <LinearLayout
            android:id="@+id/information_me_twtter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
        >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/information_me_twtter_string"
                android:theme="@style/information_me_button_style"
            />
            <TextView

                android:id="@+id/information_me_twtter_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/information_me_unbind_string"
                android:theme="@style/information_me_button_style_right"
            />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
